fixed nav collapse width

--- a/public/dadwebsiteattempt1.css
+++ b/public/dadwebsiteattempt1.css
@@ -215,20 +215,23 @@ nav {
 	margin-right: 0 !important;
 	background-color: #333333 !important;
 }
+
 .navbar {
-    -webkit-transition: all 0.6s ease-out;
-    -moz-transition: all 0.6s ease-out;
-    -o-transition: all 0.6s ease-out;
-    -ms-transition: all 0.6s ease-out;
-    transition: all 0.6s ease-out;
+	-webkit-transition: all 0.6s ease-out;
+	-moz-transition: all 0.6s ease-out;
+	-o-transition: all 0.6s ease-out;
+	-ms-transition: all 0.6s ease-out;
+	transition: all 0.6s ease-out;
 }
 
 .navbar.scrolled {
-    background: rgb(68, 68, 68); /* IE */
-    background: rgba(0, 0, 0, 0.124) !important; /* NON-IE */
+	background: rgb(68, 68, 68);
+	/* IE */
+	background: rgba(0, 0, 0, 0.124) !important;
+	/* NON-IE */
 }
 
-#logo{
+#logo {
 	margin-top: 18.5%;
 	/* padding-left: 5%; */
 	margin-left: 6%;
@@ -237,23 +240,25 @@ nav {
 
 @media only screen and (min-width: 400px) {
 
-#logo{
-	margin-top: 18.5%;
-	/* padding-left: 5%; */
-	margin-left: 6%;
-	width: 40%;
+	#logo {
+		margin-top: 18.5%;
+		/* padding-left: 5%; */
+		margin-left: 6%;
+		width: 40%;
+	}
 }
-}
+
 /* @media only screen and (min-width: 930px) { */
-	
-#logo{
+
+#logo {
 	margin-top: 12%;
 	/* padding-left: 5%; */
 	margin-left: 6%;
 	width: 40%;
 }
+
 /* } */
-.fixed-top{
+.fixed-top {
 	right: 9% !important;
 	left: 9% !important;
 }
@@ -413,9 +418,9 @@ button.navbar-toggler {
 /* .leftaanede{
 	float: right;
 } */
-@media (max-width: 990px) {
+@media (max-width: 991px) {
 	a.nav-link.redbutton {
-		width: 561.2% !important;
+		width: 653% !important;
 	}
 }
 
@@ -492,13 +497,30 @@ a.lastwala {
 }
 
 
-#logo{
+#logo {
 	position: relative;
-        animation: bounce-2 1.6s;
-    }
-    @keyframes bounce-2 {
-        0%   { transform: translateY(-60px)translateX(-60px); opacity: 0;} 
-        33%  { transform: translateY(0px)translateX(-40px); opacity: 0.33;}
-        66%  { transform: translateY(-60px)translateX(-20px); opacity: 0.66;}
-		100% {transform: translateY(0px)translateX(0px); opacity: 1;}
-		}
+	animation: bounce-2 1.6s;
+	animation-delay: 2s;
+}
+
+@keyframes bounce-2 {
+	0% {
+		transform: translateY(-60px)translateX(-60px);
+		opacity: 0;
+	}
+
+	33% {
+		transform: translateY(0px)translateX(-40px);
+		opacity: 0.33;
+	}
+
+	66% {
+		transform: translateY(-60px)translateX(-20px);
+		opacity: 0.66;
+	}
+
+	100% {
+		transform: translateY(0px)translateX(0px);
+		opacity: 1;
+	}
+}
